@@ -2,6 +2,10 @@
 	* src/auth.c(pam_sm_authenticate): if we need to be the module that
 	asks for a password, do so before sanity checking things like whether
 	or not the user name is valid (#502602)
+	* src/auth.c(pam_sm_authenticate),
+	src/prompter.c(_pam_krb5_generic_prompter): only allow libkrb5 to
+	ask for a password if we weren't supplied with one and didn't ask for
+	one ourselves
 
 2009-03-04
 	* src/initopts.c(_pam_krb5_set_init_opts_for_pwchange): add, for
